Express & Types added, server created

--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "power4",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "build/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.16.4",
     "nodemon": "^1.18.10",
     "socketio": "^1.0.0",
     "typescript": "^3.4.1"
